--- a/trabalhos.html
+++ b/trabalhos.html
@@ -54,12 +54,10 @@
                 <div class="estudante-div">
                     <img class="estudante-imagem" src="imgfotos.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Gabriel</h3>
-                    <a href="https://github.com/alves09"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
-                    <a href="https://www.instagram.com/gabriel_costa_05/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-                    <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+                    
                 </div>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="anna.png" alt="foto da Bella">
+                    <img class="estudante-imagem" src="fototra.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Ana Luiza</h3>
                     <a href="https://github.com/annalumiau"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
