--- a/trabalhos.html
+++ b/trabalhos.html
@@ -25,7 +25,7 @@
                 <div class="estudante-todos">
                     <span></span>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="fototrabalho.jpg" alt="foto da Bella">
+                    <img class="estudante-imagem" src="projetofoto.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Bella</h3>
                 </div>
                 <div class="estudante-div">
@@ -57,7 +57,7 @@
                     
                 </div>
                 <div class="estudante-div">
-                    <img class="estudante-imagem" src="fototra.jpg" alt="foto da Bella">
+                    <img class="estudante-imagem" src="imgfootos.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Ana Luiza</h3>
                     <a href="https://github.com/annalumiau"><img class="estudante-icone" src="github (2).png" alt="icone github"></a>
                     <a href="https://www.instagram.com/lopes_belh/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
