--- a/sobre.html
+++ b/sobre.html
@@ -1,6 +1,31 @@
-    <section class="sobre">
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">sobre</h2>
-            <p class="escola-texto-um">O site D-BOOTS foi criado em 2023, por aulos da escola unidade polo para falarmos sobre robotica e postarmos sobre projetos desenvolvidos em sala.</p>
-            <p class="escola-texto-dois">Nesse site teremos:localizacao, trabalhos, nós e sobre.</p>
-     </section>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Website icon" type="png"
+          href="logo2.png">
+    <title>Sobre</title>
+
+    <link rel="stylesheet" href="nos-style.css">
+    <link rel="stylesheet" href="abas-style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">    </head>
+   
+    <body>
+    
+        <header>
+            <!-- <p class="nosso-nome"> D-Boots</p>  -->
+            <div class="container">
+                <img src="logo.png" class="elemento">
+                </div>
+            </div>
+
+            <div>
+                <p></p>
+            </div>
+
+        </header>
+    </body>
+</html>
