--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,9 @@
             </div>
 
             <div>
-                <p></p>
+                <p>O site D-BOOTS foi criado em 2023, por aulos da escola unidade polo para falarmos sobre robotica e postarmos sobre projetos desenvolvidos em sala.
+
+                    Nesse site teremos:localizacao, trabalhos, nós e sobre.</p>
             </div>
 
         </header>
