--- a/trabalhos.html
+++ b/trabalhos.html
@@ -33,9 +33,11 @@
                     <h3 class="estudante-nome">Isadora</h3>
                     
                 </div>
-                <div class="estudante-div">
-                    <img class="estudante-imagem" src="imagem.png" alt="foto da Bella">
-                    <h3 class="estudante-nome">Leonardo</h3>
+                <div class="estudante-imagem">
+                    <img src="imagem.png" alt="imagem.png" style="width:100%">
+                    <div class="container">
+                    <p>Cinque Terre</p>
+                    </div> 
                     
                 </div>
                 <span></span>
