--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
           href="logo2.png">
     <title>Sobre</title>
 
-    <link rel="stylesheet" href="nos-style.css">
+    <link rel="stylesheet" href="sobre-style.css">
     <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">    </head>
@@ -21,13 +21,13 @@
                 <img src="logo.png" class="elemento">
                 </div>
             </div>
-
-            <div>
-                <p>O site D-BOOTS foi criado em 2023, por aulos da escola unidade polo para falarmos sobre robotica e postarmos sobre projetos desenvolvidos em sala.
-
-                    Nesse site teremos:localizacao, trabalhos, nós e sobre.</p>
-            </div>
-
         </header>
+
+        <main>
+        <div class="principal">
+            <p class="escrita">O site D-BOOTS foi criado em 2023, por aulos da escola unidade polo para falarmos sobre robotica e postarmos sobre projetos desenvolvidos em sala.Nesse site teremos:localizacao, trabalhos, nós e sobre.</p>
+            <p></p>
+        </div>
+    </main>
     </body>
 </html>
