--- a/trabalhos.html
+++ b/trabalhos.html
@@ -20,7 +20,7 @@
         </div>
     </div> 
 
-            <section class="estudantes">
+            /*<section class="estudantes">
                 <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
                 <div class="estudante-todos">
                     <span></span>
@@ -55,7 +55,7 @@
                     <h3 class="estudante-nome">Ana Luiza</h3>
                     
                 </div>
-                </div>
+                </div>*/
             </section>
         <nav class="menu-lateral">
             <ul>
