Atualizar o trabalhos.html

--- a/trabalhos.html
+++ b/trabalhos.html
@@ -20,6 +20,11 @@
         </div>
     </div> 
 
+<div class="container">
+<Img class="polaroid" src="ondaverde.jpg" alt="foto da Bella">
+</div>
+
+
             <!--<section class="estudantes">
                 <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
                 <div class="estudante-todos">
