--- a/trabalhos.html
+++ b/trabalhos.html
@@ -17,12 +17,11 @@
 
     <div class="container">
         <img src="logo3.png" class="elemento">
-        </div>
-    </div> 
+    </div>
 
-<div class="container">
-<Img class="polaroid" src="ondaverde.jpg" alt="foto da Bella">
-</div>
+    <div class="container2">
+        <img class="polaroid" src="ondaverde.jpg" alt="foto da Bella">
+    </div>
 
 
             <!--<section class="estudantes">
