--- a/trabalhos.html
+++ b/trabalhos.html
@@ -19,15 +19,40 @@
         <img src="logo3.png" class="elemento">
     </div>
 
-    <div class="container2">
-        <img class="polaroid" src="ondaverde.jpg" alt="foto da Bella">
-    </div>
-
+    <main class="fotos">
+        <h2 class="trabalhos">Nossos Trabalhos</h2>
+        <span></span>
+        <div class="container2">
+            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <h3 class="descricao">Bella</h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <h3 class="descricao">Bella</h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <h3 class="descricao">Bella</h3>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="container2">
+            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <h3 class="descricao">Bella</h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <h3 class="descricao">Bella</h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <h3 class="descricao">Bella</h3>
+        </div>
+    </main>
 
             <!--<section class="estudantes">
                 <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
                 <div class="estudante-todos">
-                    <span></span>
                 <div class="estudante-div">
                     <img class="estudante-imagem" src="projetofoto.jpg" alt="foto da Bella">
                     <h3 class="estudante-nome">Bella</h3>
