--- a/trabalhos.html
+++ b/trabalhos.html
@@ -27,7 +27,7 @@
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <img class="polaroid" src="projetofoto.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
