--- a/trabalhos.html
+++ b/trabalhos.html
@@ -31,7 +31,7 @@
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="fototrabalho.jpg" alt="foto da Bella">
+            <img class="polaroid" src="imagem.png" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <span></span>
