--- a/trabalhos.html
+++ b/trabalhos.html
@@ -27,11 +27,11 @@
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="projetofoto.jpg" alt="foto da Bella">
+            <img class="polaroid" src="projetofoto.jpg" alt="foto do projeto">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="imagem.png" alt="foto da Bella">
+            <img class="polaroid" src="sinalsimples.jpg" alt="foto do sinal">
             <h3 class="descricao">Bella</h3>
         </div>
         <span></span>
