--- a/trabalhos.html
+++ b/trabalhos.html
@@ -37,11 +37,11 @@
         <span></span>
         <span></span>
         <div class="container2">
-            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <img class="polaroid" src="sinalsimples.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <img class="polaroid" src="sinalsimples.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
