--- a/trabalhos.html
+++ b/trabalhos.html
@@ -37,7 +37,7 @@
         <span></span>
         <span></span>
         <div class="container2">
-            <img class="polaroid" src="sinalsimples.jpg" alt="foto da Bella">
+            <img class="polaroid" src="fototra.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
