--- a/trabalhos.html
+++ b/trabalhos.html
@@ -41,7 +41,7 @@
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="sinalsimples.jpg" alt="foto da Bella">
+            <img class="polaroid" src="fototra.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
