--- a/trabalhos.html
+++ b/trabalhos.html
@@ -23,16 +23,16 @@
         <h2 class="trabalhos">Nossos Trabalhos</h2>
         <span></span>
         <div class="container2">
-            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
-            <h3 class="descricao">Bella</h3>
+            <img class="polaroid" src="ondaverde2.jpg" alt="foto do projeto da onda verde">
+            <h3 class="descricao">Onda Verde</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="projetofoto.jpg" alt="foto do projeto">
-            <h3 class="descricao">Bella</h3>
+            <img class="polaroid" src="projetofoto.jpg" alt="foto do projeto...">
+            <h3 class="descricao">...</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="sinalsimples.jpg" alt="foto do sinal">
-            <h3 class="descricao">Bella</h3>
+            <img class="polaroid" src="sinalsimples.jpg" alt="foto do projeto semáforo simples">
+            <h3 class="descricao">Semáforo Simples</h3>
         </div>
         <span></span>
         <span></span>
