--- a/index.html
+++ b/index.html
@@ -1,76 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
-    <link rel="Website icon" type="png"
-          href="logo2.png">
+    <link rel="Website icon" type="png" href="logo2.png">
     <title>Robótica</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Geologica&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-    
+
     <div class="container">
         <img src="logo3.png" class="elemento">
-        </div>
-    </div> 
+    </div>
+    </div>
 
     <figure class="container-img">
-    <img class="center" src="robo3.png">
+        <img class="center" src="robo3.png">
     </figure>
 
     <section class="principal">
         <p class="nosso-nome">D-Boots</p>
-        <p class="descricao">A d-boots é um grupo de alunos que tem como objetivo crescerem no mundo da tecnologia. Neste site, teremos todos os nossos trabalhos, localização e também falaremos um pouco sobre o que queremos.</p>
+        <p class="descricao">A d-boots é um grupo de alunos que tem como objetivo crescerem no mundo da tecnologia.
+            Neste site, teremos todos os nossos trabalhos, localização e também falaremos um pouco sobre o que queremos.
+        </p>
     </section>
 
-    <nav class="menu-lateral">
-        <ul>
-            <li class="item-menu">
-            
-                    <span class="icon"><i class="bi bi-list"></i></span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="index.html">
-                    <span class="icon"><i class="bi bi-house"></i></span>
-                    <span class="txt-link">Home</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="trabalhos.html">
-                    <span class="icon"><i class="bi bi-image"></i></span>
-                    <span class="txt-link">Trabalhos</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="sobre.html">
-                    <span class="icon"><i class="bi bi-columns-gap"></i></span>
-                    <span class="txt-link">Sobre</span>
-                </a>
-            </li>
-            <li class="item-menu">
-            <a href="loc.html">
-                <span class="icon"><i class="bi bi-geo-alt"></i></span>
-                <span class="txt-link">Localização</span>
-            </a>
-            <li class="item-menu">
-                <a href="nos.html">
-                    <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Nós</span>
-                </a>
-            </li>
-        </ul>
-    </nav> 
+
+
+    <button>...</button>
+    <dialog>
+        <nav class="menu-lateral">
+
+            <ul>
+                <li class="item-menu">
+                    <a href="index.html">
+                        <span class="icon"><i class="bi bi-list"></i></span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="index.html">
+                        <span class="icon"><i class="bi bi-house"></i></span>
+                        <span class="txt-link">Home</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="trabalhos.html">
+                        <span class="icon"><i class="bi bi-image"></i></span>
+                        <span class="txt-link">Trabalhos</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="sobre.html">
+                        <span class="icon"><i class="bi bi-columns-gap"></i></span>
+                        <span class="txt-link">Sobre</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="loc.html">
+                        <span class="icon"><i class="bi bi-geo-alt"></i></span>
+                        <span class="txt-link">Localização</span>
+                    </a>
+                <li class="item-menu">
+                    <a href="nos.html">
+                        <span class="icon"><i class="bi bi-people-fill"></i></span>
+                        <span class="txt-link">Nós</span>
+                    </a>
+                </li>
+            </ul>
+            <button>ok</button>
+        </nav>
+    </dialog>
 
     <script src="menu.js"></script>
 </body>
+
 </html>
