Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
 
 
-    <button>...</button>
-    <dialog>
+
         <nav class="menu-lateral">
 
             <ul>
@@ -76,10 +75,18 @@
                         <span class="txt-link">Nós</span>
                     </a>
                 </li>
-            </ul>
-            <button>ok</button>
+            </ul>
         </nav>
-    </dialog>
+
+    <button>...</button>
+    <dialog> 
+ <p>bella texte</p>
+<button>...</button>
+</dialog>
+
+
+
+
 
     <script src="menu.js"></script>
 </body>
