Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
             <ul>
                 <li class="item-menu">
-                    <a href="index.html">
-                        <span class="icon"><i class="bi bi-list"></i></span>
-                    </a>
-                </li>
+                    
+                        <button class="icon"><i class="bi bi-list"></i></button>
+                    
+                </li>de
                 <li class="item-menu">
                     <a href="index.html">
                         <span class="icon"><i class="bi bi-house"></i></span>
