Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul>
                 <li class="item-menu">
                     
-                        <button class="icon"><i class="bi bi-list"></i></button>
+                        <button class="icon botao"><i class="bi bi-list"></i></button>
                     
                 </li>de
                 <li class="item-menu">
