Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 
-
+<dialog>
         <nav class="menu-lateral">
 
             <ul>
@@ -78,7 +78,7 @@
                 </li>
             </ul>
         </nav>
-
+</dialog>
    
 
 <p>bella teste</p>
