Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </section>
 
 
-
-<dialog>
+
         <nav class="menu-lateral">
 
             <ul>
+<dialog>
                 <li class="item-menu">
                     
                         <button class="icon botao"><i class="bi bi-list"></i></button>
@@ -75,10 +75,9 @@
                         <span class="icon"><i class="bi bi-people-fill"></i></span>
                         <span class="txt-link">Nós</span>
                     </a>
-                </li>
+                </li></dialog>
             </ul>
         </nav>
-</dialog>
    
 
 <p>bella teste</p>
