--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </section>
 
 
-
+<dialog>
         <nav class="menu-lateral">
 
             <ul>
-<dialog>
+
                 <li class="item-menu">
                     
                         <button class="icon botao"><i class="bi bi-list"></i></button>
@@ -75,9 +75,9 @@
                         <span class="icon"><i class="bi bi-people-fill"></i></span>
                         <span class="txt-link">Nós</span>
                     </a>
-                </li></dialog>
+                </li>
             </ul>
-        </nav>
+        </nav></dialog>
    
 
 <p>bella teste</p>
