Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
 
-<dialog>
+
         <nav class="menu-lateral">
 
             <ul>
@@ -77,10 +77,10 @@
                     </a>
                 </li>
             </ul>
-        </nav></dialog>
+        </nav>
+
    
 
-<p>bella teste</p>
 
 
 
