--- a/trabalhos.html
+++ b/trabalhos.html
@@ -23,7 +23,7 @@
         <h2 class="trabalhos">Nossos Trabalhos</h2>
         <span></span>
         <div class="container2">
-            <img class="polaroid" src="ondaverde2.jpg" alt="foto do projeto da onda verde">
+            <img class="polaroid" src="fototrabalho.jpg" alt="foto do projeto da onda verde">
             <h3 class="descricao">Onda Verde</h3>
         </div>
         <div class="container2">
