--- a/trabalhos.html
+++ b/trabalhos.html
@@ -21,7 +21,7 @@
 
     <main class="fotos">
         <h2 class="trabalhos">Nossos Trabalhos</h2>
-        <span></span>
+        <div class="div-fotos">
         <div class="container2">
             <img class="polaroid" src="fototrabalho.jpg" alt="foto do projeto da onda verde">
             <h3 class="descricao">Onda Verde</h3>
@@ -34,8 +34,7 @@
             <img class="polaroid" src="sinalsimples.jpg" alt="foto do projeto semáforo simples">
             <h3 class="descricao">Semáforo Simples</h3>
         </div>
-        <span></span>
-        <span></span>
+<br>
         <div class="container2">
             <img class="polaroid" src="fototra.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
@@ -48,6 +47,7 @@
             <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
+    </div>
     </main>
 
             <!--<section class="estudantes">
