--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 
 </head>
 
-<body>
-
+<header>
     <div class="container">
         <img src="logo3.png" class="elemento">
     </div>
-    </div>
+</header>
+
+
+<body>
 
     <figure class="container-img">
         <img class="center" src="robo3.png">
@@ -76,7 +78,8 @@
                         <span class="txt-link">Nós</span>
                     </a>
                 </li>
-            </ul>
+            </ul>
+
         </nav>
 
    
