--- a/loc.html
+++ b/loc.html
@@ -13,12 +13,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
 
 </head>
-<body>
-     <!-- <p class="nosso-nome"> D-Boots</p>  -->
 
+
+<header>
     <div class="container">
-        <img src="logo.png" class="elemento">
+        <img src="logo3.png" class="elemento">
     </div>
+</header>
+
+
+
+<body>
 
     <ul class="fale-conosco">
         <li>
