--- a/trabalhos.html
+++ b/trabalhos.html
@@ -43,7 +43,7 @@
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="ondaverde2.jpg" alt="foto da Bella">
+            <img class="polaroid" src="tratrabalho.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
     </div>
