--- a/trabalhos.html
+++ b/trabalhos.html
@@ -27,7 +27,7 @@
             <h3 class="descricao">Onda Verde</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="projetofoto.jpg" alt="foto do projeto...">
+            <img class="polaroid" src="image.jpg" alt="foto do projeto...">
             <h3 class="descricao">...</h3>
         </div>
         <div class="container2">
