--- a/trabalhos.html
+++ b/trabalhos.html
@@ -39,7 +39,7 @@
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="fototra.jpg" alt="foto da Bella">
+            <img class="polaroid" src="fotinhatrabalho.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
