--- a/trabalhos.html
+++ b/trabalhos.html
@@ -31,7 +31,7 @@
             <h3 class="descricao">...</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="iimagens.jpg" alt="foto do projeto semáforo simples">
+            <img class="polaroid" src="fotinhatrabalho.jpg" alt="foto do projeto semáforo simples">
             <h3 class="descricao">Semáforo Simples</h3>
         </div>
         <div class="container2">
