--- a/trabalhos.html
+++ b/trabalhos.html
@@ -35,7 +35,7 @@
             <h3 class="descricao">Semáforo Simples</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="fototra.jpg" alt="foto da Bella">
+            <img class="polaroid" src="imagemtrabalhinho.jpg" alt="foto da Bella">
             <h3 class="descricao">Bella</h3>
         </div>
         <div class="container2">
