--- a/trabalhos.html
+++ b/trabalhos.html
@@ -44,7 +44,8 @@
         </div>
         <div class="container2">
             <img class="polaroid" src="tratrabalho.jpg" alt="foto da Bella">
-            <h3 class="descricao">Bella</h3>
+            <h3 class="descricao">Super Máquina: Utilização da Barra Gráfica de LEDs 10 Segmentos- display utilizado para realizar sinalizaçoẽs e mostrar algum tipo de variável através da itensidade luminosa apresentada na barra
+            </h3>
         </div>
     </div>
     </main>
