--- a/trabalhos.html
+++ b/trabalhos.html
@@ -40,11 +40,11 @@
         </div>
         <div class="container2">
             <img class="polaroid" src="fotinhatrabalho.jpg" alt="foto da Bella">
-            <h3 class="descricao">Bella</h3>
+            <h3 class="descricao">PUSH BOTTON: O botão de pressão(Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito. </h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="tratrabalho.jpg" alt="foto da Bella">
-            <h3 class="descricao">Super Máquina: Utilização da Barra Gráfica de LEDs 10 Segmentos- display utilizado para realizar sinalizaçoẽs e mostrar algum tipo de variável através da itensidade luminosa apresentada na barra
+            <h3 class="descricao">SUPER MÁQUINA: Utilização da Barra Gráfica de LEDs 10 Segmentos- display utilizado para realizar sinalizaçoẽs e mostrar algum tipo de variável através da itensidade luminosa apresentada na barra.
             </h3>
         </div>
     </div>
