--- a/trabalhos.html
+++ b/trabalhos.html
@@ -28,7 +28,7 @@
         </div>
         <div class="container2">
             <img class="polaroid" src="image.jpg" alt="foto do projeto...">
-            <h3 class="descricao">...</h3>
+            <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. em sua estrutura há uma célula piezoelétrica que vibra de acordo com o sinal aplicado em seus terminais, produzindo o som. </h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="sinallfoto.jpg" alt="foto do projeto semáforo simples">
@@ -36,11 +36,11 @@
         </div>
         <div class="container2">
             <img class="polaroid" src="imagemtrabalhinho.jpg" alt="foto da Bella">
-            <h3 class="descricao">Bella</h3>
+            <h3 class="descricao">PUSH BOTTON: O botão de pressão(Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito.</h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="fotinhatrabalho.jpg" alt="foto da Bella">
-            <h3 class="descricao">PUSH BOTTON: O botão de pressão(Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito. </h3>
+            <h3 class="descricao">PUSH BOTTON: O botão de pressão (Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito. </h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="tratrabalho.jpg" alt="foto da Bella">
