--- a/trabalhos.html
+++ b/trabalhos.html
@@ -28,11 +28,16 @@
         </div>
         <div class="container2">
             <img class="polaroid" src="image.jpg" alt="foto do projeto...">
-            <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. em sua estrutura há uma célula piezoelétrica que vibra de acordo com o sinal aplicado em seus terminais, produzindo o som. </h3>
+            <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. Em sua estrutura há uma célula piezoelétrica que vibra de acordo com o sinal aplicado em seus terminais, produzindo o som. </h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="sinallfoto.jpg" alt="foto do projeto semáforo simples">
-            <h3 class="descricao">Semáforo Simples</h3>
+            <h3 class="descricao">SEMÁFORO CARRO E PEDESTRES: Este projeto visa a demonstrar como
+                funciona a sincronização entre os semáforos
+                para motoristas e para pedestres. Para tanto, apresentaremos um protótipo constituído por
+                componentes eletrônicos que permitem a simulação dos dois semáforos, a programação
+                do funcionamento destes, na linguagem escrita e em blocos, além de videotutorial para
+                a montagem e funcionamento dos semáforos na escola.</h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="imagemtrabalhinho.jpg" alt="foto da Bella">
