--- a/trabalhos.html
+++ b/trabalhos.html
@@ -34,10 +34,7 @@
             <img class="polaroid" src="sinallfoto.jpg" alt="foto do projeto semáforo simples">
             <h3 class="descricao">SEMÁFORO CARRO E PEDESTRES: Este projeto visa a demonstrar como
                 funciona a sincronização entre os semáforos
-                para motoristas e para pedestres. Para tanto, apresentaremos um protótipo constituído por
-                componentes eletrônicos que permitem a simulação dos dois semáforos, a programação
-                do funcionamento destes, na linguagem escrita e em blocos, além de videotutorial para
-                a montagem e funcionamento dos semáforos na escola.</h3>
+                para motoristas e para pedestres. </h3>
         </div>
         <div class="container2">
             <img class="polaroid" src="imagemtrabalhinho.jpg" alt="foto da Bella">
