--- a/index.html
+++ b/index.html
@@ -27,27 +27,77 @@
 
 <body>
 
-    <figure class="container-img">
-        <img class="center" src="robo3.png">
-    </figure>
 
     <section class="principal">
-        <p class="nosso-nome">D-Boots</p>
-        <p class="descricao">A d-boots é um grupo de alunos que tem como objetivo crescerem no mundo da tecnologia.
-            Neste site, teremos todos os nossos trabalhos, localização e também falaremos um pouco sobre o que queremos.
-        </p>
+        <div>
+            <p class="nosso-nome">D-Boots</p>
+            <p class="descricao-texto">A d-boots é um grupo de alunos que tem como objetivo crescerem no mundo da tecnologia.
+                Neste site, teremos todos os nossos trabalhos, localização e também falaremos um pouco sobre o que queremos.
+            </p>
+        </div>
+        <div><img class="center" src="robo3.png" alt="imagem de um robo"></div>
     </section>
 
 
 
+
+
+
+
+
+
+
+
+
+
+    <section class="fotos">
+        <h2 class="trabalhos">Nossos Trabalhos</h2>
+        <div class="div-fotos">
+        <div class="container2">
+            <img class="polaroid" src="fototra.jpg" alt="foto do projeto da onda verde">
+            <h3 class="descricao">Onda Verde</h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="image.jpg" alt="foto do projeto...">
+            <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. Em sua estrutura há uma célula piezoelétrica que vibra de acordo com o sinal aplicado em seus terminais, produzindo o som. </h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="sinallfoto.jpg" alt="foto do projeto semáforo simples">
+            <h3 class="descricao">SEMÁFORO CARRO E PEDESTRES: Este projeto visa a demonstrar como
+                funciona a sincronização entre os semáforos
+                para motoristas e para pedestres. </h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="imagemtrabalhinho.jpg" alt="foto da Bella">
+            <h3 class="descricao">PUSH BOTTON: O botão de pressão(Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito.</h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="fotinhatrabalho.jpg" alt="foto da Bella">
+            <h3 class="descricao">PUSH BOTTON: O botão de pressão (Push Botton), também conhecido como Chave Táctil, é um dispositivo utilizado para acionar, abrindo ou fechando um determinado circuito. </h3>
+        </div>
+        <div class="container2">
+            <img class="polaroid" src="tratrabalho.jpg" alt="foto da Bella">
+            <h3 class="descricao">SUPER MÁQUINA: Utilização da Barra Gráfica de LEDs 10 Segmentos- display utilizado para realizar sinalizaçoẽs e mostrar algum tipo de variável através da itensidade luminosa apresentada na barra.
+            </h3>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
         <nav class="menu-lateral">
-
             <ul>
-
                 <li class="item-menu">
-                    
-                        <button class="icon botao"><i class="bi bi-list"></i></button>
-                    
+                    <button class="icon botao"><i class="bi bi-list"></i></button>
                 </li>
                 <li class="item-menu">
                     <a href="index.html">
