--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
 
 
 
+<footer>
+    <div class="footer">
+        <div class="logo">
+          <img src="logo3.png" alt="Sua Logo">
+        </div>
+        <div class="links">
+            <a href="contato">Contato</a>
+            <a href="termos-de-uso">Termos de Uso</a>
+            <a href="politica-de-privacidade">Política de Privacidade</a>
+          </div>
+        <div class="social-icons">
+          <a href="link-para-facebook"><img src="facebook-icon.png" alt="Facebook"></a>
+          <a href="link-para-instagram"><img src="instagram-icon.png" alt="Instagram"></a>
+          <a href="link-para-twitter"><img src="twitter-icon.png" alt="Twitter"></a>
+        </div>
+      </div>
+      <div>
+        <p class="copyright">&copy; Copyright Barbearia Alura</p>
+      </div>
+</footer>
+
+
 
 
 
